@@ -3,6 +3,7 @@
 - draksound (#37826):
   o add support to enable/disable PulseAudio
   o add support to enable/disable user switching
+  o display trouble shooting when there's no driver too
 - cpufreq: fix gsx-suspmod probe
 - scannerdrake: fix to open usbtable.gz instead of usbtable
 
